mdmCeneveo/src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>Cenveo Sales Process</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Award</fullName>
        </values>
        <values>
            <fullName>Closed Dropped</fullName>
        </values>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Decision</fullName>
        </values>
        <values>
            <fullName>Differentiation</fullName>
        </values>
        <values>
            <fullName>Discovery</fullName>
        </values>
        <values>
            <fullName>Funnel</fullName>
        </values>
        <values>
            <fullName>Introduction</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>ACI_Days_Since_Last_Activity__c</fullName>
        <formula>-(LastActivityDate-TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACI Days Since Last Activity</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Activity_Monitor__c</fullName>
        <formula>IF
(ISNULL(LastActivityDate),
IMAGE(&quot;/img/samples/color_red.gif &quot;, &quot;NO ACTIVITIES&quot;,15,15),
IF( ACI_Days_Since_Last_Activity__c &lt;15,
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;Less than 30&quot;,15,15) ,
IF( ACI_Days_Since_Last_Activity__c &lt; 30,
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;30 to 45&quot;,15,15),
IF( ACI_Days_Since_Last_Activity__c &gt;29,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;45 to 60&quot;,15,15) ,
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;More than 60 Days&quot;,15,15)))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Green: Activity &lt; 15 Days

Yellow: Activity &gt; 15 Days

Red: Activity &gt;45 Days</inlineHelpText>
        <label>Activity Monitor</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Feedback_Comments__c</fullName>
        <label>Additional Feedback Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Additional_Feedback__c</fullName>
        <label>Additional Feedback</label>
        <picklist>
            <picklistValues>
                <fullName>Sales Person&apos;s Local Facility Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Print at Multiple Cenveo Facilities</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seasonal Work, specify</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Repeat RFQ, Prior Feedback Specify</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Amount_Verified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check if Opportunity is going to be close and amount is greater than 250,000 , bypass validation</inlineHelpText>
        <label>Amount Verified?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Development__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field will be used to track App Development opportunities.</description>
        <inlineHelpText>This field will be used to track App Development opportunities.</inlineHelpText>
        <label>App Development</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bid_Buy__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Please check this box if this opportunity is an Envelope Bid/Buy Proposal</inlineHelpText>
        <label>Bid/Buy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cenveo_Site_Location__c</fullName>
        <label>Cenveo Site Location</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Credit_Risk__c</fullName>
        <label>Client Credit Risk</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Client_Service_Requirement__c</fullName>
        <label>Client Service Requirement</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Average</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Close_Action__c</fullName>
        <label>What will it take to Close?</label>
        <picklist>
            <picklistValues>
                <fullName>Aggressive Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change in Terms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distribution Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electronic Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excellent Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inventory commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Material Options</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing Commitment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Successful Trial</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed__c</fullName>
        <formula>IF(
 IsClosed = TRUE,
 Amount ,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Closed $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contract_Expiration_Date__c</fullName>
        <label>Contract Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Period_From__c</fullName>
        <label>Contract Period From:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Period_To__c</fullName>
        <label>Contract Period To:</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contract_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this opportunity is a contract renewal for an existing customer with existing business that is currently produced by Cenveo</inlineHelpText>
        <label>Contract Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Representative_Email__c</fullName>
        <label>Credit Representative Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cross_Sell__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this opportunity is considered a Cross Sell Opportunity as described on YOUR compensation program/incentive program.</inlineHelpText>
        <label>Cross Sell</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Current_Customer_Annual_Spend__c</fullName>
        <formula>Account.Previous_12Mo_Sales__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Customer Annual Spend</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Current_Vendor__c</fullName>
        <label>Current Vendor</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Customer_Status__c</fullName>
        <label>Customer Status</label>
        <picklist>
            <controllingField>Type</controllingField>
            <picklistValues>
                <fullName>New Customer</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Existing Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Does_CVO_provide_product_requested__c</fullName>
        <label>Does CVO provide product requested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enterprise_Business_Solution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enterprise Business Solution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Estimated_Contribution_Margin__c</fullName>
        <defaultValue>0.00</defaultValue>
        <inlineHelpText>Enter Contribution Margin for this Opportunity</inlineHelpText>
        <label>Estimated Contribution Margin</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Estimated_Gross_Margin__c</fullName>
        <inlineHelpText>Please enter the Estimated Gross Margin PERCENT for this opportunity. You do not have to enter the % sign. 20% would be entered as 20.</inlineHelpText>
        <label>Estimated Gross Margin PERCENT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Existing_Relationship_Details__c</fullName>
        <label>Existing Relationship Details</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incumbent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.Type</field>
                <operation>equals</operation>
                <value>Competitor</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>International_Location_Listing__c</fullName>
        <inlineHelpText>Please choose the International Location for this Opportunity.</inlineHelpText>
        <label>International Location Listing</label>
        <picklist>
            <controllingField>International_Opportunity__c</controllingField>
            <picklistValues>
                <fullName>Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dominican Republic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Honduras</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hong Kong</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Thailand</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>International_Opportunity__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if this opportunity will be manufactured at a Cenveo International location</inlineHelpText>
        <label>Global/International Opportunity</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_product_ordering_website_required__c</fullName>
        <label>Is product ordering website required?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Is_warehousing_fulfillment_requested__c</fullName>
        <label>Is warehousing/fulfillment requested?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Joint_Customer_End_User_Calls__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This checkbox was created to track &apos;Joint Customer / End User Calls&apos; of significance.</description>
        <inlineHelpText>This checkbox was created to track &apos;Joint Customer / End User Calls&apos; of significance.</inlineHelpText>
        <label>Joint Customer / End User Calls</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LID__LinkedIn_Company_Id__c</fullName>
        <description>LinkedIn Id of the company</description>
        <label>LinkedIn Company Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Email__c</fullName>
        <description>This field is to pull the Owner&apos;s  manager automatically</description>
        <label>Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <formula>text (Account.Industry) &amp; &quot; - &quot; &amp; text (Account.Sub_Industry__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Segment</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Vendors_Bidding__c</fullName>
        <label>Number of Vendors Bidding</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OPEN_ACTIVITIES__c</fullName>
        <label>OPEN ACTIVITIES</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>O_Push_Counter__c</fullName>
        <description>track&apos;s how many times an opportunity close date has been pushed to the future</description>
        <formula>IF( 
OR( 
System_Log__c = 0, 
System_Log__c &lt; 11 
), 
IMAGE(&quot;/img/samples/color_green.gif&quot;,&quot;0 to 10 push&quot;,15,15), 
IF( 
System_Log__c = 11, 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;,&quot;11 pushes&quot;,15,15), 
IF( 
System_Log__c &gt;= 12, 
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;12 or more pushes&quot;,15,15), 
IMAGE(&quot;/img/samples/color_red.gif&quot;,&quot;12 or more pushes&quot;,15,15) 
)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>A push is a change to the Opportunity Close Date, 

Green Flag - 0 or 10 push 

Yellow Flag - 11 pushes 

Red Flag - 12 or more pushes</inlineHelpText>
        <label>Push Counter</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opp_Next_Step__c</fullName>
        <label>Opp Next Step</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Oppty_Open__c</fullName>
        <formula>Amount  -  Closed__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Open $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Oppty_Won__c</fullName>
        <formula>If(
 IsWon = TRUE,
 Amount,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Oppty Won $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Plant_Controller_Email__c</fullName>
        <label>Plant Controller Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Plant_Group__c</fullName>
        <label>Plant Group</label>
        <picklist>
            <picklistValues>
                <fullName>Labels &amp; Packaging Locations</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print Locations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelope Locations</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant_Location__c</fullName>
        <label>Plant Location</label>
        <picklist>
            <controllingField>Plant_Group__c</controllingField>
            <picklistValues>
                <fullName>Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CL - Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gilbreth</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl - Asia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl – Costa Rica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl – DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intl – India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kenosha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lightning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua - California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua - Merrimack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua – Omaha</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nashua – Tennessee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Albany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rx Technology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Amarillo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sidney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>St. Louis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Toledo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MM&amp;T</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lancaster</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Port City Press</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Richmond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Antonio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Conklin</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Plant</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Plant__c.Type__c</field>
                <operation>equals</operation>
                <value>Finance</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Plant__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Please_list_known_participating_vendors__c</fullName>
        <label>Please list known participating vendors:</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Product_Description__c</fullName>
        <description>This is what product(s) are being sold to customer</description>
        <inlineHelpText>Please include a brief description of the opportunity and product(s) [Carton, Label, Sleeve, POS] you are proposing to customer</inlineHelpText>
        <label>Product/Oppty Desc.</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>Folding Cartons</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sleeves</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Label Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coated Products</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Envelopes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Services</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Profitability__c</fullName>
        <label>Product Profitability</label>
        <picklist>
            <picklistValues>
                <fullName>AIC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FMC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TVC</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Sub_Group__c</fullName>
        <label>Product Sub Group</label>
        <picklist>
            <controllingField>Product_Group__c</controllingField>
            <picklistValues>
                <fullName>Auto-bottoms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards – Blisters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cards- Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Print - Charlotte</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dry Gum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Eflute</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedex</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fulfillment Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full body shrink sleeve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full body shrink sleeve with tamper evidence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Heat Seal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Imaging Supplies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Labels</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integrated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers (mailing services provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mailers (non mailing services provided)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pharmacy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pick &amp; Place</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>POS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail Shelf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RFID</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shrink combo pack</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Straight line</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Invoice_Date__c</fullName>
        <inlineHelpText>Enter the approximate date that this opportunity will be invoiced on.</inlineHelpText>
        <label>Projected Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proposal_Due_Date__c</fullName>
        <inlineHelpText>Sufficient time is needed to complete RFP: questions to the customer, paperwork to Cenveo Legal, pricing strategy, and provide Cenveo answers</inlineHelpText>
        <label>Proposal Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RFI_RFP_Date__c</fullName>
        <label>RFI/RFP Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RFI_RFP__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this opportunity is a RFI or RFP, please indicate by checking this box.</inlineHelpText>
        <label>RFI/RFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reason_Customer_Issued_Proposal__c</fullName>
        <inlineHelpText>Reason Customer Issued Proposal</inlineHelpText>
        <label>Reason for Request</label>
        <picklist>
            <picklistValues>
                <fullName>Benchmarking Current Vendor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultant Involved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cost Reduction Effort</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expansion of Current Products / Services</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>First Time RFQ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Basket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Request_Other_Comments__c</fullName>
        <inlineHelpText>If you selected &quot;Other&quot; under Reason for Request, please enter any additional information here</inlineHelpText>
        <label>Reason for Request - Other Comments</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regional_VP_Email__c</fullName>
        <description>This field is being populated with Owner&apos;s  Regional VP&apos;s Email</description>
        <label>Regional VP Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Revenue_Type__c</fullName>
        <label>Revenue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Direct</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indirect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combined</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Review_needed_now_by_IT__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review needed now by IT?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Review_needed_now_by_Legal__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Review needed now by Legal?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic_Sourcing__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Check this box if you are working with the Global Strategic Sourcing group (Steve Greenberg and Kevin Anderson) for sourcing products we do not manufacture internally.</inlineHelpText>
        <label>Strategic Sourcing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_Log__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>DO NOT edit this field. The system needs it for calculations</inlineHelpText>
        <label>System Log</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WHCDB_Days_since_last_update_or_activity__c</fullName>
        <formula>if (today() - LastActivityDate &gt;=0,
min(today() - LastActivityDate , now() - LastModifiedDate ),now() - LastModifiedDate )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days since last update or activity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Will_this_result_in_an_On_Line_Auction__c</fullName>
        <label>Will this result in an On-Line Auction?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Won_Lost_Reason__c</fullName>
        <label>Closed Reason</label>
        <picklist>
            <controllingField>StageName</controllingField>
            <picklistValues>
                <fullName>Competitor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Dropped Project</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Failed Test</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incumbent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New Product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Fit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Relationship</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reverse Auction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unable to Manufacture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>--Other--</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insufficient Time to Respond</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Year_1_Estimated_GM__c</fullName>
        <label>Year 1 Estimated GM %</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
</CustomObject>